0.3
Create Library details and a few functions with mapping